--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sketch</title>
+    <title>Plant Forward</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -13,7 +13,17 @@
   </head>
 
   <body>
-    <a>Hello!!</a>
+    <div id="navbar">
+      <a href="" id="titolo">⏩PLANT FORWARD</a>
+      <a href="" class="bottoncini" id="intro">INTRO</a>
+      <a href="" class="bottoncini" id="about">ABOUT</a>
+      <div id="switch"></div>
+    </div>
+    <div id="container">
+      <div class="b"><div class="c">hello 1</div></div>
+      <div class="b"><div class="c">hello 2</div></div>
+      <div class="b"><div class="c">hello 3</div></div>
+    </div>
     <script src="sketch.js"></script>
   </body>
 </html>
