--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Plant Forward</title>
+    <title>PLANT FORWARD</title>
+    <link rel="icon" type="image/x-icon" href="Assets/Icons/⏩.ico" />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
