--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <!-------------------------- CONTAINER ---------------------------------------------------------------------->
 
     <div id="container">
+      <!-------------------------- LANDING PAGE ---------------------------------------------------------------------->
+
       <div class="pages">
         <div class="content" id="firstpage">
           <div id="titolone">
@@ -36,12 +38,82 @@
           <div id="initialanimationcont"></div>
         </div>
       </div>
-      <div class="pages"><div class="content"></div></div>
-      <div class="pages"><div class="content"></div></div>
 
-      <!-------------------------- SCROLLITELLING TRIGGERS ---------------------------------------------------------------------->
+      <!-------------------------- WIKIPEDIA DEFINITION ---------------------------------------------------------------------->
+
+      <div class="pages">
+        <div class="content" id="secondpage">
+          <div id="wikidef">
+            <div class="atxt">
+              <a id="atxt1">
+                Reforestation is the natural restocking of existing forests and
+              </a>
+            </div>
+            <div class="atxt">
+              <a id="atxt2">
+                woodlands that have been depleted, usually through
+              </a>
+            </div>
+            <div class="atxt">
+              <a id="atxt3"> deforestation, but also after clearcutting. </a>
+            </div>
+            <div class="atxt"><a id="atxt4"> (Wikipedia) </a></div>
+          </div>
+        </div>
+      </div>
+
+      <!-------------------------- PHRASE 1 ---------------------------------------------------------------------->
+
+      <div class="pages">
+        <div class="content" id="thirdpage">
+          <div id="phrase1">
+            <div class="atxt">
+              <div id="human">human</div>
+            </div>
+            <div class="a1txt">
+              <div id="a1txt1">
+                Reforestation is an inherently
+                <span style="color: #3b3b3b">human</span> activity
+              </div>
+            </div>
+            <div class="a2txt">
+              <div id="a2txt1">
+                carried out by <span style="color: #3b3b3b">human</span>s
+              </div>
+            </div>
+            <div class="a3txt">
+              <div id="a3txt1">
+                to repair damage caused by
+                <span style="color: #3b3b3b">human</span>s,
+              </div>
+            </div>
+            <div class="a4txt">
+              <div id="a4txt1">
+                requiring <span style="color: #3b3b3b">human</span> intervention
+                throughout all phases of growth.
+              </div>
+            </div>
+            <div class="a5txt">
+              <div id="a5txt1">
+                Reforestation is an inherently
+                <span style="color: #2aa948">human</span> activity carried out
+                by <span style="color: #2aa948">humans</span> to repair damage
+                caused by <span style="color: #2aa948">humans</span>, requiring
+                <span style="color: #2aa948">human</span>
+                intervention throughout all phases of growth.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-------------------------- SCROLLITELLING TRIGGERS & PAGE POSITIONERS ---------------------------------------------------------------------->
 
       <div class="triggers" id="tshowbar"></div>
+      <div class="triggers" id="tsecondpage"></div>
+      <div class="triggers" id="tthirdpage"></div>
+
+      <div class="triggers" id="snapper"></div>
     </div>
 
     <!-------------------------- SCRIPT ---------------------------------------------------------------------->
