--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <a href="" id="titolo">⏩PLANT FORWARD</a>
       <a href="" class="bottoncini" id="intro">INTRO</a>
       <a href="" class="bottoncini" id="about">ABOUT</a>
-      <div id="switch"></div>
     </div>
 
     <!-------------------------- CONTAINER ---------------------------------------------------------------------->
@@ -31,6 +30,7 @@
       <!-------------------------- LANDING PAGE ---------------------------------------------------------------------->
 
       <div class="pages">
+        <div id="coperchio1"></div>
         <div class="content" id="firstpage">
           <div id="titolone">
             ⏩ PLANT<br />
@@ -44,6 +44,7 @@
 
       <div class="pages">
         <div class="content" id="secondpage">
+          <div id="coperchio2"></div>
           <div id="wikidef">
             <div class="atxt">
               <a id="atxt1">
@@ -105,6 +106,20 @@
               </div>
             </div>
           </div>
+          <div id="image1"></div>
+          <div id="image2"></div>
+          <div id="image3"></div>
+          <div id="image4"></div>
+          <div id="image5"></div>
+          <div id="image6"></div>
+          <div id="image7"></div>
+          <div id="image8"></div>
+          <div id="image9"></div>
+          <div id="image10"></div>
+          <div id="image11"></div>
+          <div id="image12"></div>
+          <div id="image13"></div>
+          <div id="image14"></div>
         </div>
       </div>
 
@@ -130,7 +145,6 @@
             </div>
           </div>
         </div>
-        <div id="imagecontainer"></div>
       </div>
 
       <!-------------------------- SCROLLITELLING TRIGGERS & PAGE POSITIONERS ---------------------------------------------------------------------->
